objects/ASI_eForm_Pre_Trip_Approval_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Booking_Status__c</fullName>
        <label>Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Premium Economy</fullName>
                </value>
                <value>
                    <fullName>Business Class</fullName>
                </value>
                <value>
                    <fullName>First Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_ETA__c</fullName>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_ETD__c</fullName>
        <label>ETD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Flight__c</fullName>
        <label>Flight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Pre_Trip_Approval__c</fullName>
        <label>Pre-Trip Approval</label>
        <referenceTo>ASI_eForm_Pre_Trip_Approval__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Pre_Trip_Approval_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Return_Date__c</fullName>
        <label>Return Date ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Round_Trip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pre-Trip Approval Item</label>
    <nameField>
        <displayFormat>PRTAI-{00000000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Trip Approval Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_Pre_Trip_Approval_Item</fullName>
        <active>true</active>
        <label>Pre-Trip Approval Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_Pre_Trip_Approval_Item_SG</fullName>
        <active>true</active>
        <label>Pre-Trip Approval Item SG</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_ETA_ETD_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ASI_eForm_ETA__c &lt;  ASI_eForm_ETD__c , NOT( ISBLANK(ASI_eForm_ETA__c) ),  NOT( ISBLANK(ASI_eForm_ETD__c)) )</errorConditionFormula>
        <errorDisplayField>ASI_eForm_ETA__c</errorDisplayField>
        <errorMessage>ETA must not be before ETD.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_ETA_ReturnDate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ASI_eForm_Return_Date__c  &lt; ASI_eForm_ETA__c , NOT( ISBLANK(ASI_eForm_Return_Date__c ) ), NOT( ISBLANK(ASI_eForm_ETA__c)) )</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Return_Date__c</errorDisplayField>
        <errorMessage>Return Date ETA must be greater than the ETA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Return_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ASI_eForm_Round_Trip__c , ISNULL( ASI_eForm_Return_Date__c ) )</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Return_Date__c</errorDisplayField>
        <errorMessage>Return Date cannot be undefined when the Line is a round trip.</errorMessage>
    </validationRules>
</CustomObject>